# ansible-nerd-fonts

./: .yamllint  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cicd.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  main.yml
molecule/default/: molecule.yml  verify.yml
molecule/localhost/: converge.yml  verify.yml
molecule/steamdeck/: converge.yml  prepare.yml  verify.yml
tasks/: archlinux.yml  darwin.yml  debian.yml  install.yml  linux.yml  main.yml  uninstall.yml
