[project]
name = "ansible-nerd-fonts"
version = "0.1.0"
description = "Ansible role to install Nerd Fonts across Arch, Debian, macOS, and SteamOS"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ansible-core>=2.16,<2.18",
    "ansible-lint>=24.0.0",
    "molecule>=24.0.0",
    "molecule-plugins[docker]>=23.0.0",
    "yamllint>=1.38.0",
]
